frontend/tests/cases/positive/interfaces/simple/interface-simple-07.gr
data SimpleDT = SDT

interface Simple a where
  simple : a -> a

-- simple instance
instance Simple SimpleDT where
  simple x = x
