frontend/tests/cases/negative/notInScopeTyVarInInterface.gr
-- we use 'b' which is not bound
interface Simple a where
  simple : a -> b
